thule-ping-service/k8s/cit.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: thule-ping-service
  namespace: thule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thule-ping-service
      namespace: thule
  template:
    metadata:
      labels:
        app: thule-ping-service
        namespace: thule
    spec:
      serviceAccountName: thule-ping-service-account
      containers:
        - name: thule-ping-service
          image: gcr.io/google-containers/echoserver:1.10
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: service-port
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-ping-service"
  name: thule-ping-service-ingress
  namespace: thule
spec:
  rules:
    - host: piglet
      http:
        paths:
          - path: /thule-ping-service(/|$)(.*)
            backend:
              serviceName: thule-ping-service
              servicePort: 80
  tls:
    - hosts:
        - piglet
      secretName: thule-application-secrets
---
kind: Service
apiVersion: v1
metadata:
  name: thule-ping-service
  namespace: thule
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: thule-ping-service
    namespace: thule
